# PythonArchive

DjangoProjects/DOCKER DJANGO TEMPLATE/: Dockerfile  docker-compose 2.yml  docker-compose.yml  pyproject.toml
DjangoProjects/DOCKER DJANGO TEMPLATE/data/db/base/13757/: 1247  1247 2  1249 2  1259  16384  16385 2  16391 2  16393  16393 2  16400 2  16402  16407 2  16418  16425  16426 2  16430  16430 2  16434  16434 2  16446 2  16455 2  16456  16471  16471 2  16484  16485  16499  16501  16501 2  16507 2  16520 2  16521  16521 2  16526 2  16530  16534 2  16535  16537  16537 2  16538  (+25 more)
DjangoProjects/DOCKER DJANGO TEMPLATE/data/db/global/: pg_control  pg_control 2  pg_internal 2.init  pg_internal.init
DjangoProjects/DOCKER DJANGO TEMPLATE/data/db/pg_stat/: global.stat
DjangoProjects/DOCKER DJANGO TEMPLATE/todoproject/: settings.py
DjangoProjects/todoapp/: db.sqlite3
DockerProjects/python-docker-tutorial/: Dockerfile  docker-compose.yml  pyproject.toml
DockerProjects/python-docker-tutorial/data/db/base/13757/: 1247  1249  1259  16385  16394  16403  16425  16426  16432  16471  16530  16535  16537  16538  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  (+3 more)
DockerProjects/python-docker-tutorial/data/db/global/: 1260  pg_control  pg_internal.init
DockerProjects/python-docker-tutorial/data/db/pg_stat/: db_0.stat  db_13757.stat  global.stat
DockerProjects/python-docker-tutorial/tutorialproject/: settings.py  urls.py
randomstuff/buddhalifespan/: buddha.ipynb  (+3 more)
(+224 files in other folders)
