[tool.poetry]
name = "python-docker-tutorial"
version = "0.1.0"
description = ""
authors = ["Damian <damian.makoza@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
gunicorn = "^20.1.0"
psycopg2 = "2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
